Fix failing test